changes in html and stylesheet

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     </div>
     <div class="wrapper">
       <div
+        class="sec1"
         data-scroll
         data-scroll-sticky
         data-scroll-target=".wrapper"
-        class="sec1"
       >
         <div class="row">
           <h1 class="fs2">Digital</h1>
@@ -59,7 +59,7 @@
         </p>
       </div>
       <div class="sections-holder">
-        <div data-scroll-section class="sec2">
+        <div class="sec2">
           <video
             src="https://assets.website-files.com/6205ecdcec584c56193d6121/620e78bc9b48eb5690366bf7_Showreel-RocketAir-transcode.mp4"
             autoplay
@@ -67,13 +67,13 @@
             loop
           ></video>
         </div>
-        <div data-scroll-section class="sec3">
+        <div class="sec3">
           <p class="rowtexts fs3">
             RocketAir is a design and strategy company with an adaptive approach
             to problem solving.
           </p>
         </div>
-        <div data-scroll-section class="sec4">
+        <div class="sec4">
           <h3 class="fs3">We call it <span class="line"></span></h3>
           <div class="rowtext">
             <h1 class="fs1 rowtexts">orbital</h1>
@@ -86,7 +86,7 @@
             </div>
           </div>
         </div>
-        <div data-scroll-section class="sec5">
+        <div class="sec5">
           <div data-index="1" class="slide sld">
             <div class="opening"></div>
             <div class="tile">
@@ -156,7 +156,7 @@
             </div>
           </div>
         </div>
-        <div data-scroll-section class="sec6">
+        <div class="sec6">
           <h2 class="fs2 rowtexts">
             We partner with<br />forward-thinking<br />enterprises and startups.
           </h2>
@@ -207,33 +207,60 @@
             </div>
           </div>
         </div>
-        <div data-scroll-section class="sec7">
-          <div class="headingbox">
+        <div class="sec7">
+          <div
+            data-scroll
+            data-scroll-sticky
+            data-scroll-target=".sec7"
+            class="headingbox"
+          >
             <h1 class="fs1">work</h1>
           </div>
           <div class="cbholder">
             <div class="cardbox">
               <div class="card">
-                <div class="top"></div>
-                <div class="bottom"></div>
+                <div class="top">
+                  <img
+                    src="https://assets-global.website-files.com/620970e0fc117e313fe36ebd/628f3a391956b4593811ca66_thumb_newlimit-p-500.jpeg"
+                    alt=""
+                  />
+                </div>
+                <div class="bottom">
+                  <h4 class="fs4">NewLimit</h4>
+                </div>
               </div>
             </div>
             <div class="cardbox">
               <div class="card">
-                <div class="top"></div>
-                <div class="bottom"></div>
+                <div class="top">
+                  <img
+                    src="https://assets-global.website-files.com/620970e0fc117e313fe36ebd/631047a405bc513ad86a56ae_surf-internet-thumbnail-p-500.jpg"
+                    alt=""
+                  />
+                </div>
+                <div class="bottom">
+                  <h4 class="fs4">Surf Internet</h4>
+                </div>
               </div>
             </div>
             <div class="cardbox">
               <div class="card">
-                <div class="top"></div>
-                <div class="bottom"></div>
+                <div class="top">
+                  <img
+                    src="https://assets-global.website-files.com/620970e0fc117e313fe36ebd/6268fab393803a81e2d7a89e_focus-V_thumbnail-p-500.jpeg"
+                    alt=""
+                  />
+                </div>
+                <div class="bottom">
+                  <h4 class="fs4">FocusVision</h4>
+                </div>
               </div>
             </div>
+            <div class="randombox"></div>
           </div>
         </div>
         <!-- 
-        <div data-scroll-section id="footer">
+        <div id="footer">
           <div id="fleft">
             <h1 class="rowtexts">Fuel for thought.</h1>
             <p class="rowtexts">
