changes in html and stylesheet

--- a/index.html
+++ b/index.html
@@ -259,11 +259,10 @@
             <div class="randombox"></div>
           </div>
         </div>
-        <!-- 
-        <div id="footer">
-          <div id="fleft">
-            <h1 class="rowtexts">Fuel for thought.</h1>
-            <p class="rowtexts">
+        <div class="footer">
+          <div class="fleft">
+            <h3 class="fs3 rowtexts">Fuel for thought.</h3>
+            <p class="fs5 rowtexts">
               A casual hello from the RocketAir Crew filled with insights,
               inspiration, and good vibes only.
             </p>
@@ -271,28 +270,15 @@
               src="https://assets.website-files.com/6205ecdcec584c56193d6121/6246217a2a1efb208cb41ffa_badge-fueled_news.svg"
               alt=""
             />
-            <input type="text" placeholder="Email" />
-            <button class="rowtexts">subscribe</button>
+            <input class="fs5" type="text" placeholder="Email" />
+            <div class="button">
+              <span class="fs4">Subscribe</span>
+              <div class="opening"></div>
+            </div>
           </div>
-          <div id="fright">
+          <div class="fright">
             <a href="">
-              <span>Home</span>
-              <div class="opening"></div>
-            </a>
-            <a href=""
-              ><span>Contact</span>
-              <div class="opening"></div>
-            </a>
-            <a href=""
-              ><span>Pricing</span>
-              <div class="opening"></div>
-            </a>
-            <a href=""
-              ><span>Video</span>
-              <div class="opening"></div>
-            </a>
-            <a href=""
-              ><span>Verticals</span>
+              <span>Work</span>
               <div class="opening"></div>
             </a>
             <a href=""
@@ -300,16 +286,37 @@
               <div class="opening"></div>
             </a>
             <a href=""
-              ><span>Contact</span>
+              ><span>Services</span>
               <div class="opening"></div>
             </a>
-            <small
-              >website done at Sheryians Coding School as final project of B18
-              Batch :D</small
-            >
+            <a href="">
+              <span>Verticals</span>
+              <div class="opening"></div>
+            </a>
+            <a href="">
+              <span>Careers</span>
+              <div class="opening"></div>
+            </a>
+            <a href="">
+              <span>Ideas</span>
+              <div class="opening"></div>
+            </a>
+            <a href="">
+              <span>News</span>
+              <div class="opening"></div>
+            </a>
+            <a href="">
+              <span>Contact</span>
+              <div class="opening"></div>
+            </a>
+            <div class="linkbox">
+              <i class="ri-twitter-fill"></i>
+              <i class="ri-linkedin-fill"></i>
+              <i class="ri-youtube-fill"></i>
+              <i class="ri-instagram-fill"></i>
+            </div>
           </div>
         </div>
-        -->
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
