changes in html/stylesheet/javascript

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="linkbox">
         <div class="button">
           <span class="fs5">Get in touch</span>
-          <div class="opening"></div>
+          <div class="opener"></div>
         </div>
         <div class="menubtn">
           <div class="circle c1"></div>
@@ -73,13 +73,13 @@
               <h1 class="fs1 rowtexts">design</h1>
               <div class="button">
                 <span class="fs4">Get to know us</span>
-                <div class="opening"></div>
+                <div class="opener"></div>
               </div>
             </div>
           </div>
           <div class="sec5">
             <div data-index="1" class="slide sld">
-              <div class="opening"></div>
+              <div class="opener"></div>
               <div class="tile">
                 <h3 class="fs3">Brand</h3>
                 <div class="icon">
@@ -90,7 +90,7 @@
               <p class="fs5">Unique brand identities that make a mark.</p>
             </div>
             <div data-index="2" class="slide sld">
-              <div class="opening"></div>
+              <div class="opener"></div>
 
               <div class="tile">
                 <h3 class="fs3">Product</h3>
@@ -102,7 +102,7 @@
               <p class="fs5">Intuitive digital produts that people get.</p>
             </div>
             <div data-index="3" class="slide sld">
-              <div class="opening"></div>
+              <div class="opener"></div>
 
               <div class="tile">
                 <h3 class="fs3">Motion</h3>
@@ -263,41 +263,41 @@
               <input class="fs5" type="text" placeholder="Email" />
               <div class="button">
                 <span class="fs4">Subscribe</span>
-                <div class="opening"></div>
+                <div class="opener"></div>
               </div>
             </div>
             <div class="fright">
               <a href="">
                 <span>Work</span>
-                <div class="opening"></div>
+                <div class="opener"></div>
               </a>
               <a href=""
                 ><span>About</span>
-                <div class="opening"></div>
+                <div class="opener"></div>
               </a>
               <a href=""
                 ><span>Services</span>
-                <div class="opening"></div>
+                <div class="opener"></div>
               </a>
               <a href="">
                 <span>Verticals</span>
-                <div class="opening"></div>
+                <div class="opener"></div>
               </a>
               <a href="">
                 <span>Careers</span>
-                <div class="opening"></div>
+                <div class="opener"></div>
               </a>
               <a href="">
                 <span>Ideas</span>
-                <div class="opening"></div>
+                <div class="opener"></div>
               </a>
               <a href="">
                 <span>News</span>
-                <div class="opening"></div>
+                <div class="opener"></div>
               </a>
               <a href="">
                 <span>Contact</span>
-                <div class="opening"></div>
+                <div class="opener"></div>
               </a>
               <div class="linkbox">
                 <i class="ri-twitter-fill"></i>
