last commit & end of project

--- a/index.html
+++ b/index.html
@@ -310,6 +310,9 @@
         </div>
       </div>
     </div>
+    <script src="./libs/gsap/gsap.min.js"></script>
+    <script src="./libs/gsap/ScrollTrigger.min.js"></script>
+    <script src="./libs/gsap/ScrollSmoother.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
