last commit & end of project

--- a/index.html
+++ b/index.html
@@ -300,10 +300,22 @@
                 <div class="opener"></div>
               </a>
               <div class="linkbox">
-                <i class="ri-twitter-fill"></i>
-                <i class="ri-linkedin-fill"></i>
-                <i class="ri-youtube-fill"></i>
-                <i class="ri-instagram-fill"></i>
+                <span>
+                  <i class="ri-twitter-fill"></i>
+                  <div class="opener"></div>
+                </span>
+                <span>
+                  <i class="ri-linkedin-fill"></i>
+                  <div class="opener"></div>
+                </span>
+                <span>
+                  <i class="ri-youtube-fill"></i>
+                  <div class="opener"></div>
+                </span>
+                <span>
+                  <i class="ri-instagram-fill"></i>
+                  <div class="opener"></div>
+                </span>
               </div>
             </div>
           </div>
