last commit & end of project

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="./stylesheets/sass/style.css" />
+    <link rel="stylesheet" href="./sass/style.css" />
   </head>
   <body>
     <div class="nav">
